Changed Calendar, Added More Responsizeness
Changed the calendar page to use fullcalendar.io
Made the Bulletin embed more responsive
Made the Upcoming Events section more responsive

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
             <div class="upcoming-events col-md-2">
                 <!--   </ul> -->
                 <div class="span3 fullWidth767">
-                    <ul id="events-upcoming" class="list1"></ul>
-                </div>
+                    <ul id="events-upcoming" class="list1"></ul> <a href="/calendar/">View Full Calendar</a> </div>
             </div>
             <div class="page-content co-md-6">
                 <h3>Mission Statement</h3>
@@ -118,7 +117,7 @@
             , pastSelector: '#events-past'
             , upcomingHeading: '<h3>Upcoming events</h3>'
             , pastHeading: '<h2>Past events</h2>'
-            , format: ['<h4>', '*summary*', '</h4>', '*date*', '<br/>', '*location*']
+            , format: ['<h4>', '*summary*', '</h4>', '*date*']
         });
     </script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
