--- a/calendar/index.html
+++ b/calendar/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/fullcalendar.min.css" rel="stylesheet">
     <link rel="icon" href="/img/church-favicon.png">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -80,8 +80,8 @@
             </div>
             <!-- /.container-fluid -->
         </nav>
-        <div class="container events-calendar">
-            <iframe src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=millhousenchurch.com_9og4v0j9kgl200r65quv01d65c%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <div id='calendar' class="container">
+            <p><a href="http://www.google.com/calendar/render?cid=http://www.google.com/calendar/feeds/millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com/public/basic" target="_blank">Add</a> our calendar to your Google account for easy access through the Google Calendar app!</p>
         </div>
     </div>
     <footer class="footer">
@@ -95,6 +95,19 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/fullcalendar.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/gcal.js"></script>
+    <script type='text/javascript'>
+        $(document).ready(function () {
+            $('#calendar').fullCalendar({
+                googleCalendarApiKey: 'AIzaSyAzEfSIZVELF5T1ZDrd-xwWNwRc69s-Zm8'
+                , events: {
+                    googleCalendarId: 'millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com'
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
