Added GitHub Link, Bulletin Browse Template
Added a link for contributers to GitHub, added Browse Template for browsing historical bulletins

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -87,7 +87,8 @@
     <footer class="footer">
         <div class="jagged-pattern"></div>
         <div class="container">
-            <p class="text-muted">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
+            <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
+            <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">Github</a></p>
         </div>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
