--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="upcoming-events col-md-2">
                 <!--   </ul> -->
                 <div class="span3 fullWidth767">
-                    <ul id="events-upcoming" class="list1"></ul> <a href="/calendar/">View Full Calendar</a> </div>
+                    <ul id="events-upcoming" class="list1"></ul> <a href="/calendar/" class="upcoming-events-subtext">View Full Calendar</a> </div>
             </div>
             <div class="page-content co-md-6">
                 <h3>Mission Statement</h3>
@@ -97,7 +97,8 @@
     <footer class="footer">
         <div class="jagged-pattern"></div>
         <div class="container">
-            <p class="text-muted">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
+            <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
+            <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">Github</a></p>
         </div>
     </footer>
     <script src="/js/format-google-calendar.js"></script>
