--- a/bulletins/index.html
+++ b/bulletins/index.html
@@ -85,12 +85,13 @@
             <object data="/bulletins/files/2016/2016-11-06.pdf" type="application/pdf" width="100%" height="800">
                 <p>This browser does not support PDFs. Please <a href="/bulletins/files/2016/2016-11-06.pdf">download the PDF</a> to view it.</p>
             </object>
-            <p>If you are in need of a paper copy of the bulletin, pick one up from the Bulletin Box in front of church.</p> <a href="#">Browse Historical Bulletins</a> </div>
+            <p>If you are in need of a paper copy of the bulletin, pick one up from the Bulletin Box in front of church.</p> <a href="/bulletins/files/">Browse Historical Bulletins</a> </div>
     </div>
     <footer class="footer">
         <div class="jagged-pattern"></div>
         <div class="container">
-            <p class="text-muted">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
+            <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
+            <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">Github</a></p>
         </div>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
