--- a/bulletins/index.html
+++ b/bulletins/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.css" />
     <link rel="icon" href="/img/church-favicon.png">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,8 +23,9 @@
 </head>
 
 <body>
+    <div id="outdated"></div>
     <div class="row branding-header">
-        <div class="col-md-3"><img class="brand" src="/img/church-logo.svg" alt="Immaculate Conception Logo"></div>
+        <div class="col-md-3 brand-left"><img class="brand" src="/img/church-logo.svg" alt="Immaculate Conception Logo"></div>
         <div class="col-md-6">
             <div class="brand-txt">
                 <h1>Immaculate Conception Church</h1>
@@ -35,7 +36,7 @@
                 <ul>
                     <li>PLC: Sister Donna Prickel</li>
                     <li>Mass: Sunday at 8 AM</li>
-                    <li><a href="tel:8125913703">(812) 591-2362</a></li>
+                    <li><a href="tel:8125912362">(812) 591-2362</a></li>
                 </ul>
             </div>
         </div>
@@ -50,10 +51,10 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                        <li><a href="/">Home</a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Staff</a></li>
+                                <li><a href="/staff/">Staff</a></li>
                                 <li><a href="#">Lay Leadership</a></li>
                                 <li><a href="#">Parish History</a></li>
                                 <li role="separator" class="divider"></li>
@@ -72,7 +73,7 @@
                         </li>
                         <li><a href="#">Sacraments</a></li>
                         <li><a href="/calendar/">Events Calendar</a></li>
-                        <li class="active"><a href="/bulletins/">Bulletins</a></li>
+                        <li class="active"><a href="/bulletins/">Bulletins <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Ministry Schedule</a></li>
                     </ul>
                 </div>
@@ -91,7 +92,7 @@
         <div class="jagged-pattern"></div>
         <div class="container">
             <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a> - Hosted by <a href="http://www.stsmarthosting.com/">Street Smart</a></p>
-            <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">Github</a></p>
+            <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
         </div>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -99,6 +100,8 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.js"></script>
+    <script src="/js/outdated-browser.js"></script>
 </body>
 
 </html>
