--- a/staff/index.html
+++ b/staff/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/fullcalendar.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.css" />
     <link rel="icon" href="/img/church-favicon.png">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -53,9 +52,9 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+                        <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/staff/">Staff</a></li>
+                                <li><a href="/staff/">Staff <span class="sr-only">(current)</span></a></li>
                                 <li><a href="#">Lay Leadership</a></li>
                                 <li><a href="#">Parish History</a></li>
                                 <li role="separator" class="divider"></li>
@@ -73,7 +72,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Sacraments</a></li>
-                        <li class="active"><a href="/calendar/">Events Calendar <span class="sr-only">(current)</span></a></li>
+                        <li><a href="/calendar/">Events Calendar</a></li>
                         <li><a href="/bulletins/">Bulletins</a></li>
                         <li><a href="#">Ministry Schedule</a></li>
                     </ul>
@@ -82,8 +81,45 @@
             </div>
             <!-- /.container-fluid -->
         </nav>
-        <div id='calendar' class="container">
-            <p><a href="http://www.google.com/calendar/render?cid=http://www.google.com/calendar/feeds/millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com/public/basic" target="_blank">Add</a> our calendar to your Google account for easy access through the Google Calendar app!</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/2199fa4a7cd032a11f82cd2ed717fbdc?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Sister Donna Prickel</h2>
+                                <div class="job">Parish Life Coordinator</div>
+                                <div class="mail"><a href="mailto:sisterdonna@millhousenchurch.com">sisterdonna@millhousenchurch.com</a> </div>
+                                <div class="mail">Home: <a href="tel:8125912362">812-591-2362</a> - Mobile: <a href="tel:5134102600">513-410-2600</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/1ae200965d3c94a8c76ee639aa869461?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Kathaleen Westrick</h2>
+                                <div class="job">Religious Education Administrator</div>
+                                <div class="mail"><a href="mailto:kathy@millhousenchurch.com">kathy@millhousenchurch.com</a> </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Father William Turner</h2>
+                                <div class="job">Sacramental Minister</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer class="footer">
@@ -98,19 +134,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/fullcalendar.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/gcal.js"></script>
-    <script type='text/javascript'>
-        $(document).ready(function () {
-            $('#calendar').fullCalendar({
-                googleCalendarApiKey: 'AIzaSyAzEfSIZVELF5T1ZDrd-xwWNwRc69s-Zm8'
-                , events: {
-                    googleCalendarId: 'millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com'
-                }
-            });
-        });
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.js"></script>
     <script src="/js/outdated-browser.js"></script>
 </body>
