--- a/bulletins/index.html
+++ b/bulletins/index.html
@@ -86,7 +86,10 @@
             <object data="/bulletins/files/2016/2016-11-06.pdf" type="application/pdf" width="100%" height="800">
                 <p>This browser does not support PDFs. Please <a href="/bulletins/files/2016/2016-11-06.pdf">download the PDF</a> to view it.</p>
             </object>
-            <p>If you are in need of a paper copy of the bulletin, pick one up from the Bulletin Box in front of church.</p> <a href="/bulletins/files/">Browse Historical Bulletins</a> </div>
+            <p>If you are in need of a paper copy of the bulletin, pick one up from the Bulletin Box in front of church.</p>
+            <h3>Need an older bulletin?</h3>
+            <p>If you are in need of a past bulletin, <a href="/bulletins/files/">browse our archives</a>.</p>
+        </div>
     </div>
     <footer class="footer">
         <div class="jagged-pattern"></div>
