Added Phone and About links for Fr. Bill
Added a phone number and a link to Father Bill's page on the ArchIndy website.

--- a/staff/index.html
+++ b/staff/index.html
@@ -115,6 +115,8 @@
                             <div class="media-body">
                                 <h2 class="media-heading">Father William Turner</h2>
                                 <div class="job">Sacramental Minister</div>
+                                <div class="mail"><a href="tel:3175125410">317-512-5410</a></div>
+                                <div class="job"><a href="http://www.archindy.org/staff/priests/turner-william.html">About Father Bill</a></div>
                             </div>
                         </div>
                     </div>
