Add Kathy's Phone, Page Heading

--- a/staff/index.html
+++ b/staff/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="We are very grateful to have several dedicated staff members assisting the parish and coordinating many of its efforts!">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Immaculate Conception Church | Millhousen, IN</title>
     <!-- Bootstrap -->
@@ -82,6 +83,8 @@
             <!-- /.container-fluid -->
         </nav>
         <div class="container">
+            <h3>Staff</h3>
+            <p>We are very grateful to have several dedicated staff members assisting the parish and coordinating many of its efforts!</p>
             <div class="row">
                 <div class="col-md-6">
                     <div class="business-card">
@@ -104,6 +107,8 @@
                                 <h2 class="media-heading">Kathaleen Westrick</h2>
                                 <div class="job">Religious Education Administrator</div>
                                 <div class="mail"><a href="mailto:kathy@millhousenchurch.com">kathy@millhousenchurch.com</a> </div>
+                                <div class="mail"><a href="tel:8125912433">812-591-2433</a></div>
+
                             </div>
                         </div>
                     </div>
