--- a/lay-leadership/index.html
+++ b/lay-leadership/index.html
@@ -94,7 +94,7 @@
                             <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/2199fa4a7cd032a11f82cd2ed717fbdc?d=identicon&s=120&r=g"> </div>
                             <div class="media-body">
                                 <h2 class="media-heading">Sister Donna Prickel</h2>
-                                <div class="job">President and Chairperson</div>
+                                <div class="job">President and Chairwoman</div>
                                 <div class="job">Parish Life Coordinator</div>
                                 <div class="mail"><a href="mailto:sisterdonna@millhousenchurch.com">sisterdonna@millhousenchurch.com</a> </div>
                                 <div class="mail">Home: <a href="tel:8125912362">812-591-2362</a> - Mobile: <a href="tel:5134102600">513-410-2600</a></div>
@@ -129,6 +129,124 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <h4>Parish Council</h4>
+            <p>Purpose, who we are, what we do</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/2199fa4a7cd032a11f82cd2ed717fbdc?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Scott Hermesch</h2>
+                                <div class="job">Chairman</div>
+                                <div class="mail"><a href="mailto:scott@email.com">scott@email.com</a> </div>
+                                <div class="mail">Home: <a href="tel:8125912362">812-591-2362</a> - Mobile: <a href="tel:5134102600">513-410-2600</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/1ae200965d3c94a8c76ee639aa869461?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Carrie Stier</h2>
+                                <div class="job">Secretary</div>
+                                <div class="mail"><a href="mailto:carrie@email.com">carrie@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Tim Hoeing</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:tim@email.com">tim@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Rodney Martin</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:rodney@email.com">rodney@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Tricia Maples</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:tricia@email.com">tricia@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                                                                    <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Mark Stier</h2>
+                                <div class="job">Faith Formation Chair</div>
+                                <div class="mail"><a href="mailto:mark@email.com">mark@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                                                                                                        <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Greg Mattox</h2>
+                                <div class="job">Buildings and Grounds Chair</div>
+                                <div class="mail"><a href="mailto:greg@email.com">greg@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                                                                                                                                            <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Chris Scheidler</h2>
+                                <div class="job">Finance Committee Chair</div>
+                                <div class="mail"><a href="mailto:chris@email.com">chris@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                                                                                                                                            <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Sister Donna Prickel</h2>
+                                <div class="job">Parish Life Coordinator</div>
+                                <div class="mail"><a href="mailto:sisterdonna@millhousenchurch.com">sisterdonna@millhousenchurch.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
