Added Finance Committee

--- a/lay-leadership/index.html
+++ b/lay-leadership/index.html
@@ -249,6 +249,63 @@
                     </div>
             </div>
         </div>
+                                                                        <h4>Finance Committee</h4>
+            <p>Purpose, who we are, what we do</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/2199fa4a7cd032a11f82cd2ed717fbdc?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Chris Scheidler</h2>
+                                <div class="job">Chairman</div>
+                                <div class="mail"><a href="mailto:chris@email.com">chris@email.com</a> </div>
+                                <div class="mail">Home: <a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/1ae200965d3c94a8c76ee639aa869461?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Victor Meyer</h2>
+                                <div class="job">Secretary</div>
+                                <div class="mail"><a href="mailto:vic@email.com">vic@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Joseph Diekhoff</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:joe@email.com">joe@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Kate Bedel</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:kate@email.com">kate@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </div>
     <footer class="footer">
         <div class="jagged-pattern"></div>
