Added Faith Formation Commission

--- a/lay-leadership/index.html
+++ b/lay-leadership/index.html
@@ -306,6 +306,89 @@
                     </div>
                 </div>
             </div>
+                                                                        <h4>Faith Formation Commission</h4>
+            <p>Purpose, who we are, what we do</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/2199fa4a7cd032a11f82cd2ed717fbdc?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Kathy Westrick</h2>
+                                <div class="job">Religious Education Administrator</div>
+                                <div class="mail"><a href="mailto:kathy@millhousenchurch.com">kathy@millhousenchurch.com</a> </div>
+                                <div class="mail">Home: <a href="tel:8125912433">812-591-2433</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/1ae200965d3c94a8c76ee639aa869461?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Mark Stier</h2>
+                                <div class="job">Chairman</div>
+                                <div class="mail"><a href="mailto:mark@email.com">mark@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Kristen Stone</h2>
+                                <div class="job">Secretary</div>
+                                <div class="mail"><a href="mailto:kristen@email.com">kristen@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Alice Chandler</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:alice@email.com">alice@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Patricia Klene</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:patty@email.com">patty@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Amy Hermesch</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:amy@email.com">amy@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </div>
     <footer class="footer">
         <div class="jagged-pattern"></div>
