Added Buildings and Grounds

--- a/lay-leadership/index.html
+++ b/lay-leadership/index.html
@@ -389,6 +389,154 @@
                     </div>
                 </div>
             </div>
+            <h4>Buildings and Grounds Committee</h4>
+            <p>Purpose, who we are, what we do</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/2199fa4a7cd032a11f82cd2ed717fbdc?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Greg Mattox</h2>
+                                <div class="job">Chairman</div>
+                                <div class="mail"><a href="mailto:greg@email.com">greg@email.com</a> </div>
+                                <div class="mail">Home: <a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/1ae200965d3c94a8c76ee639aa869461?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Dave Stone</h2>
+                                <div class="job">Keys</div>
+                                <div class="mail"><a href="mailto:dave@email.com">dave@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Kerry Fry</h2>
+                                <div class="job">Cemetery</div>
+                                <div class="mail"><a href="mailto:kerry@email.com">kerry@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Tom Johannigman</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:tom@email.com">tom@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Steve Stone</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:steve@email.com">steve@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Ken Stone</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:ken@email.com">ken@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Mike Bedel</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:mike@email.com">mike@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Jeff Chandler</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:jeff@email.com">jeff@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Jim Hardebeck</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:jim@email.com">jim@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Kevin Schwering</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:kevin@email.com">kevin@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="business-card">
+                        <div class="media">
+                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
+                            <div class="media-body">
+                                <h2 class="media-heading">Alvin Pfeifer</h2>
+                                <div class="job">Member</div>
+                                <div class="mail"><a href="mailto:alvin@email.com">alvin@email.com</a> </div>
+                                <div class="mail"><a href="tel:8125915555">812-591-5555</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </div>
     <footer class="footer">
         <div class="jagged-pattern"></div>
